--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -73,4 +73,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.88" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="46dp"
+        android:layout_height="43dp"
+        app:srcCompat="@drawable/ic_chevron_left_black_24dp"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="16dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
