--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#00026e</color>
     <color name="colorPrimaryDark">#00026e</color>
-    <color name="colorAccent">#00026e</color>
+    <color name="colorAccent">#00026E</color>
 </resources>
